<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#eddbed"
    tools:context="com.example.ruby.trainingproject.Reminder.Reminder">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar"
        app:titleTextColor="@color/white"
        android:background="@color/colorAccent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reminder"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            />

    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/ed1reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/message"
        android:layout_above="@id/bt1"
        android:paddingBottom="30dp"
        android:textSize="30sp" />

    <Button
        android:id="@+id/bt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_reminder"
        android:layout_margin="16dp"
        android:background="@color/transparent"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/bt2cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bt1"
        android:background="@color/transparent"
        android:layout_margin="16dp"
        android:text="@string/cancel_reminder"
        android:onClick="cancelAlarm"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"/>

</RelativeLayout>
