<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightBlack"
    android:orientation="vertical"
    tools:context="com.example.ruby.trainingproject.ProfilePage.Profile">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar"
        app:titleTextColor="@color/white"
        android:background="@color/colorAccent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_page"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="28sp"
            />

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/photo"
            android:alpha="0.30"
            android:scaleType="fitCenter"
            />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/SmallPhoto"
            android:layout_width="108dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="2dp"
            android:layout_centerInParent="true"
            android:layout_height="108dp"
            />

    </RelativeLayout>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:background="@color/colorAccent"
    android:layout_weight="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="25sp"
            android:id="@+id/name"
            android:textColor="@color/white"
            android:alpha="0.70"
            android:padding="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:id="@+id/mailId"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:alpha="0.7"
            android:layout_margin="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:textSize="25sp"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:alpha="0.70"
            android:id="@+id/phoneNumber"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/address"
            android:textSize="25sp"
            android:alpha="0.70"
            android:textColor="@color/white"
            android:id="@+id/address"
            android:layout_margin="10dp"
            />

    </LinearLayout>
</ScrollView>
</LinearLayout>
