<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lightPink"
    tools:context="com.example.ruby.trainingproject.OptionsPage.Options">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar"
        app:titleTextColor="@color/white"
        android:background="@color/colorAccent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/world_cup_app"
            android:textSize="20sp"
            android:textColor="@color/white"
            />

    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_margin="8dp"
        android:id="@+id/headingUsername"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_margin="8dp"
        android:id="@+id/headingEmail"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <GridLayout
            android:id="@+id/Grid1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:alpha="0.85"
            android:background="@color/colorAccent"
            android:orientation="horizontal"
            android:padding="8dp">

            <Button
                android:id="@+id/toReminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_row="0"
                android:background="@color/transparent"
                android:gravity="center"
                android:onClick="openReminder"
                android:padding="8dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:text="@string/reminder"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/toTodoList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_row="0"
                android:background="@color/transparent"
                android:gravity="center"
                android:onClick="openTodo"
                android:padding="8dp"
                android:text="@string/todo_list"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/toProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_row="1"
                android:background="@color/transparent"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:onClick="openProfile"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:text="@string/profile_page"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/toLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_row="1"
                android:background="@color/transparent"
                android:gravity="center"
                android:onClick="openLogout"
                android:padding="8dp"
                android:text="@string/logout"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </GridLayout>
    </RelativeLayout>
</LinearLayout>