<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.example.ruby.trainingproject.Login.Login">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar"
        app:titleTextColor="@color/white"
        android:background="@color/colorAccent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textStyle="bold"
            android:textSize="28sp"
            android:textColor="@color/white"
            />

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/loginBackground"
            android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="265dp"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:layout_margin="16dp"
            android:src="@drawable/worldcup" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:id="@+id/errorMessage"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:hint="@string/email"
            android:textColor="@color/loginText"
            android:singleLine="true"
            android:id="@+id/id"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:hint="@string/password"
            android:textColor="@color/loginText"
            android:singleLine="true"
            android:id="@+id/pass"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="25dp"
            android:id="@+id/login"
            android:background="@drawable/circular_button"
            android:padding="8dp"
            android:text="@string/login"
            android:textColor="@color/white"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/background"
            android:orientation="vertical">


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/circular_button"
                android:padding="8dp"
                android:onClick="register"
                android:text="@string/registration"
                android:textColor="@color/white" />
        </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>
